add configs